parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMPLEMENT
    DIFERENCE
    EDGE
    ELIF
    MULTIGRAPH
    PSEUDOGRAPH
    STRING

Grammar

Rule 0     S' -> Instructions
Rule 1     Instructions -> Instructions Instruction
Rule 2     Instructions -> Instruction
Rule 3     Instruction -> Plot_instr
Rule 4     Instruction -> If_instr
Rule 5     Instruction -> If_else_instr
Rule 6     Instruction -> For_vertex_instr
Rule 7     Instruction -> Assign_instr
Rule 8     Instruction -> For_edge_instr
Rule 9     If_instr -> IF OPAR logic_expression CPAR BEGIN Instructions END
Rule 10    If_else_instr -> IF OPAR logic_expression CPAR BEGIN Instructions END ELSE BEGIN Instructions END
Rule 11    For_vertex_instr -> FORVERTEX ID IN ID BEGIN Instructions END
Rule 12    For_edge_instr -> FOREDGE ID IN ID BEGIN Instructions END
Rule 13    Plot_instr -> PLOT OPAR ID CPAR
Rule 14    Assign_instr -> ID ASSIGN graph_expression
Rule 15    graph_expression -> GRAPH OPAR INT COMMA edge_expression CPAR
Rule 16    graph_expression -> DIGRAPH OPAR INT COMMA edge_expression CPAR
Rule 17    graph_expression -> graph_expression UNION graph_expression
Rule 18    graph_expression -> graph_expression INTERSECTION graph_expression
Rule 19    edge_expression -> edge_expression OPAR INT COMMA INT CPAR
Rule 20    edge_expression -> OPAR INT COMMA INT CPAR
Rule 21    edge_expression -> edge_expression OPAR INT COMMA INT COMMA INT CPAR
Rule 22    edge_expression -> OPAR INT COMMA INT COMMA INT CPAR
Rule 23    edge_expression -> edge_expression OPAR INT COMMA INT COMMA FLOAT CPAR
Rule 24    edge_expression -> OPAR INT COMMA INT COMMA FLOAT CPAR
Rule 25    logic_expression -> value_expression EQUAL value_expression
Rule 26    logic_expression -> value_expression GREATER value_expression
Rule 27    logic_expression -> value_expression LESS value_expression
Rule 28    logic_expression -> value_expression GREATEREQ value_expression
Rule 29    logic_expression -> value_expression LESSEQ value_expression
Rule 30    logic_expression -> value_expression NEQUAL value_expression
Rule 31    value_expression -> algebraic_expression
Rule 32    algebraic_expression -> INT
Rule 33    algebraic_expression -> FLOAT
Rule 34    algebraic_expression -> algebraic_expression PLUS algebraic_expression
Rule 35    algebraic_expression -> algebraic_expression MINUS algebraic_expression
Rule 36    algebraic_expression -> algebraic_expression MUL algebraic_expression
Rule 37    algebraic_expression -> algebraic_expression DIV algebraic_expression
Rule 38    algebraic_expression -> MINUS algebraic_expression

Terminals, with rules where they appear

ASSIGN               : 14
BEGIN                : 9 10 10 11 12
COMMA                : 15 16 19 20 21 21 22 22 23 23 24 24
COMPLEMENT           : 
CPAR                 : 9 10 13 15 16 19 20 21 22 23 24
DIFERENCE            : 
DIGRAPH              : 16
DIV                  : 37
EDGE                 : 
ELIF                 : 
ELSE                 : 10
END                  : 9 10 10 11 12
EQUAL                : 25
FLOAT                : 23 24 33
FOREDGE              : 12
FORVERTEX            : 11
GRAPH                : 15
GREATER              : 26
GREATEREQ            : 28
ID                   : 11 11 12 12 13 14
IF                   : 9 10
IN                   : 11 12
INT                  : 15 16 19 19 20 20 21 21 21 22 22 22 23 23 24 24 32
INTERSECTION         : 18
LESS                 : 27
LESSEQ               : 29
MINUS                : 35 38
MUL                  : 36
MULTIGRAPH           : 
NEQUAL               : 30
OPAR                 : 9 10 13 15 16 19 20 21 22 23 24
PLOT                 : 13
PLUS                 : 34
PSEUDOGRAPH          : 
STRING               : 
UNION                : 17
error                : 

Nonterminals, with rules where they appear

Assign_instr         : 7
For_edge_instr       : 8
For_vertex_instr     : 6
If_else_instr        : 5
If_instr             : 4
Instruction          : 1 2
Instructions         : 1 9 10 10 11 12 0
Plot_instr           : 3
algebraic_expression : 31 34 34 35 35 36 36 37 37 38
edge_expression      : 15 16 19 21 23
graph_expression     : 14 17 17 18 18
logic_expression     : 9 10
value_expression     : 25 25 26 26 27 27 28 28 29 29 30 30

Parsing method: LALR

state 0

    (0) S' -> . Instructions
    (1) Instructions -> . Instructions Instruction
    (2) Instructions -> . Instruction
    (3) Instruction -> . Plot_instr
    (4) Instruction -> . If_instr
    (5) Instruction -> . If_else_instr
    (6) Instruction -> . For_vertex_instr
    (7) Instruction -> . Assign_instr
    (8) Instruction -> . For_edge_instr
    (13) Plot_instr -> . PLOT OPAR ID CPAR
    (9) If_instr -> . IF OPAR logic_expression CPAR BEGIN Instructions END
    (10) If_else_instr -> . IF OPAR logic_expression CPAR BEGIN Instructions END ELSE BEGIN Instructions END
    (11) For_vertex_instr -> . FORVERTEX ID IN ID BEGIN Instructions END
    (14) Assign_instr -> . ID ASSIGN graph_expression
    (12) For_edge_instr -> . FOREDGE ID IN ID BEGIN Instructions END

    PLOT            shift and go to state 9
    IF              shift and go to state 11
    FORVERTEX       shift and go to state 12
    ID              shift and go to state 10
    FOREDGE         shift and go to state 13

    Instructions                   shift and go to state 1
    Instruction                    shift and go to state 2
    Plot_instr                     shift and go to state 3
    If_instr                       shift and go to state 4
    If_else_instr                  shift and go to state 5
    For_vertex_instr               shift and go to state 6
    Assign_instr                   shift and go to state 7
    For_edge_instr                 shift and go to state 8

state 1

    (0) S' -> Instructions .
    (1) Instructions -> Instructions . Instruction
    (3) Instruction -> . Plot_instr
    (4) Instruction -> . If_instr
    (5) Instruction -> . If_else_instr
    (6) Instruction -> . For_vertex_instr
    (7) Instruction -> . Assign_instr
    (8) Instruction -> . For_edge_instr
    (13) Plot_instr -> . PLOT OPAR ID CPAR
    (9) If_instr -> . IF OPAR logic_expression CPAR BEGIN Instructions END
    (10) If_else_instr -> . IF OPAR logic_expression CPAR BEGIN Instructions END ELSE BEGIN Instructions END
    (11) For_vertex_instr -> . FORVERTEX ID IN ID BEGIN Instructions END
    (14) Assign_instr -> . ID ASSIGN graph_expression
    (12) For_edge_instr -> . FOREDGE ID IN ID BEGIN Instructions END

    PLOT            shift and go to state 9
    IF              shift and go to state 11
    FORVERTEX       shift and go to state 12
    ID              shift and go to state 10
    FOREDGE         shift and go to state 13

    Instruction                    shift and go to state 14
    Plot_instr                     shift and go to state 3
    If_instr                       shift and go to state 4
    If_else_instr                  shift and go to state 5
    For_vertex_instr               shift and go to state 6
    Assign_instr                   shift and go to state 7
    For_edge_instr                 shift and go to state 8

state 2

    (2) Instructions -> Instruction .

    PLOT            reduce using rule 2 (Instructions -> Instruction .)
    IF              reduce using rule 2 (Instructions -> Instruction .)
    FORVERTEX       reduce using rule 2 (Instructions -> Instruction .)
    ID              reduce using rule 2 (Instructions -> Instruction .)
    FOREDGE         reduce using rule 2 (Instructions -> Instruction .)
    $end            reduce using rule 2 (Instructions -> Instruction .)
    END             reduce using rule 2 (Instructions -> Instruction .)


state 3

    (3) Instruction -> Plot_instr .

    PLOT            reduce using rule 3 (Instruction -> Plot_instr .)
    IF              reduce using rule 3 (Instruction -> Plot_instr .)
    FORVERTEX       reduce using rule 3 (Instruction -> Plot_instr .)
    ID              reduce using rule 3 (Instruction -> Plot_instr .)
    FOREDGE         reduce using rule 3 (Instruction -> Plot_instr .)
    $end            reduce using rule 3 (Instruction -> Plot_instr .)
    END             reduce using rule 3 (Instruction -> Plot_instr .)


state 4

    (4) Instruction -> If_instr .

    PLOT            reduce using rule 4 (Instruction -> If_instr .)
    IF              reduce using rule 4 (Instruction -> If_instr .)
    FORVERTEX       reduce using rule 4 (Instruction -> If_instr .)
    ID              reduce using rule 4 (Instruction -> If_instr .)
    FOREDGE         reduce using rule 4 (Instruction -> If_instr .)
    $end            reduce using rule 4 (Instruction -> If_instr .)
    END             reduce using rule 4 (Instruction -> If_instr .)


state 5

    (5) Instruction -> If_else_instr .

    PLOT            reduce using rule 5 (Instruction -> If_else_instr .)
    IF              reduce using rule 5 (Instruction -> If_else_instr .)
    FORVERTEX       reduce using rule 5 (Instruction -> If_else_instr .)
    ID              reduce using rule 5 (Instruction -> If_else_instr .)
    FOREDGE         reduce using rule 5 (Instruction -> If_else_instr .)
    $end            reduce using rule 5 (Instruction -> If_else_instr .)
    END             reduce using rule 5 (Instruction -> If_else_instr .)


state 6

    (6) Instruction -> For_vertex_instr .

    PLOT            reduce using rule 6 (Instruction -> For_vertex_instr .)
    IF              reduce using rule 6 (Instruction -> For_vertex_instr .)
    FORVERTEX       reduce using rule 6 (Instruction -> For_vertex_instr .)
    ID              reduce using rule 6 (Instruction -> For_vertex_instr .)
    FOREDGE         reduce using rule 6 (Instruction -> For_vertex_instr .)
    $end            reduce using rule 6 (Instruction -> For_vertex_instr .)
    END             reduce using rule 6 (Instruction -> For_vertex_instr .)


state 7

    (7) Instruction -> Assign_instr .

    PLOT            reduce using rule 7 (Instruction -> Assign_instr .)
    IF              reduce using rule 7 (Instruction -> Assign_instr .)
    FORVERTEX       reduce using rule 7 (Instruction -> Assign_instr .)
    ID              reduce using rule 7 (Instruction -> Assign_instr .)
    FOREDGE         reduce using rule 7 (Instruction -> Assign_instr .)
    $end            reduce using rule 7 (Instruction -> Assign_instr .)
    END             reduce using rule 7 (Instruction -> Assign_instr .)


state 8

    (8) Instruction -> For_edge_instr .

    PLOT            reduce using rule 8 (Instruction -> For_edge_instr .)
    IF              reduce using rule 8 (Instruction -> For_edge_instr .)
    FORVERTEX       reduce using rule 8 (Instruction -> For_edge_instr .)
    ID              reduce using rule 8 (Instruction -> For_edge_instr .)
    FOREDGE         reduce using rule 8 (Instruction -> For_edge_instr .)
    $end            reduce using rule 8 (Instruction -> For_edge_instr .)
    END             reduce using rule 8 (Instruction -> For_edge_instr .)


state 9

    (13) Plot_instr -> PLOT . OPAR ID CPAR

    OPAR            shift and go to state 15


state 10

    (14) Assign_instr -> ID . ASSIGN graph_expression

    ASSIGN          shift and go to state 16


state 11

    (9) If_instr -> IF . OPAR logic_expression CPAR BEGIN Instructions END
    (10) If_else_instr -> IF . OPAR logic_expression CPAR BEGIN Instructions END ELSE BEGIN Instructions END

    OPAR            shift and go to state 17


state 12

    (11) For_vertex_instr -> FORVERTEX . ID IN ID BEGIN Instructions END

    ID              shift and go to state 18


state 13

    (12) For_edge_instr -> FOREDGE . ID IN ID BEGIN Instructions END

    ID              shift and go to state 19


state 14

    (1) Instructions -> Instructions Instruction .

    PLOT            reduce using rule 1 (Instructions -> Instructions Instruction .)
    IF              reduce using rule 1 (Instructions -> Instructions Instruction .)
    FORVERTEX       reduce using rule 1 (Instructions -> Instructions Instruction .)
    ID              reduce using rule 1 (Instructions -> Instructions Instruction .)
    FOREDGE         reduce using rule 1 (Instructions -> Instructions Instruction .)
    $end            reduce using rule 1 (Instructions -> Instructions Instruction .)
    END             reduce using rule 1 (Instructions -> Instructions Instruction .)


state 15

    (13) Plot_instr -> PLOT OPAR . ID CPAR

    ID              shift and go to state 20


state 16

    (14) Assign_instr -> ID ASSIGN . graph_expression
    (15) graph_expression -> . GRAPH OPAR INT COMMA edge_expression CPAR
    (16) graph_expression -> . DIGRAPH OPAR INT COMMA edge_expression CPAR
    (17) graph_expression -> . graph_expression UNION graph_expression
    (18) graph_expression -> . graph_expression INTERSECTION graph_expression

    GRAPH           shift and go to state 22
    DIGRAPH         shift and go to state 23

    graph_expression               shift and go to state 21

state 17

    (9) If_instr -> IF OPAR . logic_expression CPAR BEGIN Instructions END
    (10) If_else_instr -> IF OPAR . logic_expression CPAR BEGIN Instructions END ELSE BEGIN Instructions END
    (25) logic_expression -> . value_expression EQUAL value_expression
    (26) logic_expression -> . value_expression GREATER value_expression
    (27) logic_expression -> . value_expression LESS value_expression
    (28) logic_expression -> . value_expression GREATEREQ value_expression
    (29) logic_expression -> . value_expression LESSEQ value_expression
    (30) logic_expression -> . value_expression NEQUAL value_expression
    (31) value_expression -> . algebraic_expression
    (32) algebraic_expression -> . INT
    (33) algebraic_expression -> . FLOAT
    (34) algebraic_expression -> . algebraic_expression PLUS algebraic_expression
    (35) algebraic_expression -> . algebraic_expression MINUS algebraic_expression
    (36) algebraic_expression -> . algebraic_expression MUL algebraic_expression
    (37) algebraic_expression -> . algebraic_expression DIV algebraic_expression
    (38) algebraic_expression -> . MINUS algebraic_expression

    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    MINUS           shift and go to state 29

    logic_expression               shift and go to state 24
    value_expression               shift and go to state 25
    algebraic_expression           shift and go to state 26

state 18

    (11) For_vertex_instr -> FORVERTEX ID . IN ID BEGIN Instructions END

    IN              shift and go to state 30


state 19

    (12) For_edge_instr -> FOREDGE ID . IN ID BEGIN Instructions END

    IN              shift and go to state 31


state 20

    (13) Plot_instr -> PLOT OPAR ID . CPAR

    CPAR            shift and go to state 32


state 21

    (14) Assign_instr -> ID ASSIGN graph_expression .
    (17) graph_expression -> graph_expression . UNION graph_expression
    (18) graph_expression -> graph_expression . INTERSECTION graph_expression

    PLOT            reduce using rule 14 (Assign_instr -> ID ASSIGN graph_expression .)
    IF              reduce using rule 14 (Assign_instr -> ID ASSIGN graph_expression .)
    FORVERTEX       reduce using rule 14 (Assign_instr -> ID ASSIGN graph_expression .)
    ID              reduce using rule 14 (Assign_instr -> ID ASSIGN graph_expression .)
    FOREDGE         reduce using rule 14 (Assign_instr -> ID ASSIGN graph_expression .)
    $end            reduce using rule 14 (Assign_instr -> ID ASSIGN graph_expression .)
    END             reduce using rule 14 (Assign_instr -> ID ASSIGN graph_expression .)
    UNION           shift and go to state 33
    INTERSECTION    shift and go to state 34


state 22

    (15) graph_expression -> GRAPH . OPAR INT COMMA edge_expression CPAR

    OPAR            shift and go to state 35


state 23

    (16) graph_expression -> DIGRAPH . OPAR INT COMMA edge_expression CPAR

    OPAR            shift and go to state 36


state 24

    (9) If_instr -> IF OPAR logic_expression . CPAR BEGIN Instructions END
    (10) If_else_instr -> IF OPAR logic_expression . CPAR BEGIN Instructions END ELSE BEGIN Instructions END

    CPAR            shift and go to state 37


state 25

    (25) logic_expression -> value_expression . EQUAL value_expression
    (26) logic_expression -> value_expression . GREATER value_expression
    (27) logic_expression -> value_expression . LESS value_expression
    (28) logic_expression -> value_expression . GREATEREQ value_expression
    (29) logic_expression -> value_expression . LESSEQ value_expression
    (30) logic_expression -> value_expression . NEQUAL value_expression

    EQUAL           shift and go to state 38
    GREATER         shift and go to state 39
    LESS            shift and go to state 40
    GREATEREQ       shift and go to state 41
    LESSEQ          shift and go to state 42
    NEQUAL          shift and go to state 43


state 26

    (31) value_expression -> algebraic_expression .
    (34) algebraic_expression -> algebraic_expression . PLUS algebraic_expression
    (35) algebraic_expression -> algebraic_expression . MINUS algebraic_expression
    (36) algebraic_expression -> algebraic_expression . MUL algebraic_expression
    (37) algebraic_expression -> algebraic_expression . DIV algebraic_expression

    EQUAL           reduce using rule 31 (value_expression -> algebraic_expression .)
    GREATER         reduce using rule 31 (value_expression -> algebraic_expression .)
    LESS            reduce using rule 31 (value_expression -> algebraic_expression .)
    GREATEREQ       reduce using rule 31 (value_expression -> algebraic_expression .)
    LESSEQ          reduce using rule 31 (value_expression -> algebraic_expression .)
    NEQUAL          reduce using rule 31 (value_expression -> algebraic_expression .)
    CPAR            reduce using rule 31 (value_expression -> algebraic_expression .)
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45
    MUL             shift and go to state 46
    DIV             shift and go to state 47


state 27

    (32) algebraic_expression -> INT .

    PLUS            reduce using rule 32 (algebraic_expression -> INT .)
    MINUS           reduce using rule 32 (algebraic_expression -> INT .)
    MUL             reduce using rule 32 (algebraic_expression -> INT .)
    DIV             reduce using rule 32 (algebraic_expression -> INT .)
    EQUAL           reduce using rule 32 (algebraic_expression -> INT .)
    GREATER         reduce using rule 32 (algebraic_expression -> INT .)
    LESS            reduce using rule 32 (algebraic_expression -> INT .)
    GREATEREQ       reduce using rule 32 (algebraic_expression -> INT .)
    LESSEQ          reduce using rule 32 (algebraic_expression -> INT .)
    NEQUAL          reduce using rule 32 (algebraic_expression -> INT .)
    CPAR            reduce using rule 32 (algebraic_expression -> INT .)


state 28

    (33) algebraic_expression -> FLOAT .

    PLUS            reduce using rule 33 (algebraic_expression -> FLOAT .)
    MINUS           reduce using rule 33 (algebraic_expression -> FLOAT .)
    MUL             reduce using rule 33 (algebraic_expression -> FLOAT .)
    DIV             reduce using rule 33 (algebraic_expression -> FLOAT .)
    EQUAL           reduce using rule 33 (algebraic_expression -> FLOAT .)
    GREATER         reduce using rule 33 (algebraic_expression -> FLOAT .)
    LESS            reduce using rule 33 (algebraic_expression -> FLOAT .)
    GREATEREQ       reduce using rule 33 (algebraic_expression -> FLOAT .)
    LESSEQ          reduce using rule 33 (algebraic_expression -> FLOAT .)
    NEQUAL          reduce using rule 33 (algebraic_expression -> FLOAT .)
    CPAR            reduce using rule 33 (algebraic_expression -> FLOAT .)


state 29

    (38) algebraic_expression -> MINUS . algebraic_expression
    (32) algebraic_expression -> . INT
    (33) algebraic_expression -> . FLOAT
    (34) algebraic_expression -> . algebraic_expression PLUS algebraic_expression
    (35) algebraic_expression -> . algebraic_expression MINUS algebraic_expression
    (36) algebraic_expression -> . algebraic_expression MUL algebraic_expression
    (37) algebraic_expression -> . algebraic_expression DIV algebraic_expression
    (38) algebraic_expression -> . MINUS algebraic_expression

    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    MINUS           shift and go to state 29

    algebraic_expression           shift and go to state 48

state 30

    (11) For_vertex_instr -> FORVERTEX ID IN . ID BEGIN Instructions END

    ID              shift and go to state 49


state 31

    (12) For_edge_instr -> FOREDGE ID IN . ID BEGIN Instructions END

    ID              shift and go to state 50


state 32

    (13) Plot_instr -> PLOT OPAR ID CPAR .

    PLOT            reduce using rule 13 (Plot_instr -> PLOT OPAR ID CPAR .)
    IF              reduce using rule 13 (Plot_instr -> PLOT OPAR ID CPAR .)
    FORVERTEX       reduce using rule 13 (Plot_instr -> PLOT OPAR ID CPAR .)
    ID              reduce using rule 13 (Plot_instr -> PLOT OPAR ID CPAR .)
    FOREDGE         reduce using rule 13 (Plot_instr -> PLOT OPAR ID CPAR .)
    $end            reduce using rule 13 (Plot_instr -> PLOT OPAR ID CPAR .)
    END             reduce using rule 13 (Plot_instr -> PLOT OPAR ID CPAR .)


state 33

    (17) graph_expression -> graph_expression UNION . graph_expression
    (15) graph_expression -> . GRAPH OPAR INT COMMA edge_expression CPAR
    (16) graph_expression -> . DIGRAPH OPAR INT COMMA edge_expression CPAR
    (17) graph_expression -> . graph_expression UNION graph_expression
    (18) graph_expression -> . graph_expression INTERSECTION graph_expression

    GRAPH           shift and go to state 22
    DIGRAPH         shift and go to state 23

    graph_expression               shift and go to state 51

state 34

    (18) graph_expression -> graph_expression INTERSECTION . graph_expression
    (15) graph_expression -> . GRAPH OPAR INT COMMA edge_expression CPAR
    (16) graph_expression -> . DIGRAPH OPAR INT COMMA edge_expression CPAR
    (17) graph_expression -> . graph_expression UNION graph_expression
    (18) graph_expression -> . graph_expression INTERSECTION graph_expression

    GRAPH           shift and go to state 22
    DIGRAPH         shift and go to state 23

    graph_expression               shift and go to state 52

state 35

    (15) graph_expression -> GRAPH OPAR . INT COMMA edge_expression CPAR

    INT             shift and go to state 53


state 36

    (16) graph_expression -> DIGRAPH OPAR . INT COMMA edge_expression CPAR

    INT             shift and go to state 54


state 37

    (9) If_instr -> IF OPAR logic_expression CPAR . BEGIN Instructions END
    (10) If_else_instr -> IF OPAR logic_expression CPAR . BEGIN Instructions END ELSE BEGIN Instructions END

    BEGIN           shift and go to state 55


state 38

    (25) logic_expression -> value_expression EQUAL . value_expression
    (31) value_expression -> . algebraic_expression
    (32) algebraic_expression -> . INT
    (33) algebraic_expression -> . FLOAT
    (34) algebraic_expression -> . algebraic_expression PLUS algebraic_expression
    (35) algebraic_expression -> . algebraic_expression MINUS algebraic_expression
    (36) algebraic_expression -> . algebraic_expression MUL algebraic_expression
    (37) algebraic_expression -> . algebraic_expression DIV algebraic_expression
    (38) algebraic_expression -> . MINUS algebraic_expression

    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    MINUS           shift and go to state 29

    value_expression               shift and go to state 56
    algebraic_expression           shift and go to state 26

state 39

    (26) logic_expression -> value_expression GREATER . value_expression
    (31) value_expression -> . algebraic_expression
    (32) algebraic_expression -> . INT
    (33) algebraic_expression -> . FLOAT
    (34) algebraic_expression -> . algebraic_expression PLUS algebraic_expression
    (35) algebraic_expression -> . algebraic_expression MINUS algebraic_expression
    (36) algebraic_expression -> . algebraic_expression MUL algebraic_expression
    (37) algebraic_expression -> . algebraic_expression DIV algebraic_expression
    (38) algebraic_expression -> . MINUS algebraic_expression

    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    MINUS           shift and go to state 29

    value_expression               shift and go to state 57
    algebraic_expression           shift and go to state 26

state 40

    (27) logic_expression -> value_expression LESS . value_expression
    (31) value_expression -> . algebraic_expression
    (32) algebraic_expression -> . INT
    (33) algebraic_expression -> . FLOAT
    (34) algebraic_expression -> . algebraic_expression PLUS algebraic_expression
    (35) algebraic_expression -> . algebraic_expression MINUS algebraic_expression
    (36) algebraic_expression -> . algebraic_expression MUL algebraic_expression
    (37) algebraic_expression -> . algebraic_expression DIV algebraic_expression
    (38) algebraic_expression -> . MINUS algebraic_expression

    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    MINUS           shift and go to state 29

    value_expression               shift and go to state 58
    algebraic_expression           shift and go to state 26

state 41

    (28) logic_expression -> value_expression GREATEREQ . value_expression
    (31) value_expression -> . algebraic_expression
    (32) algebraic_expression -> . INT
    (33) algebraic_expression -> . FLOAT
    (34) algebraic_expression -> . algebraic_expression PLUS algebraic_expression
    (35) algebraic_expression -> . algebraic_expression MINUS algebraic_expression
    (36) algebraic_expression -> . algebraic_expression MUL algebraic_expression
    (37) algebraic_expression -> . algebraic_expression DIV algebraic_expression
    (38) algebraic_expression -> . MINUS algebraic_expression

    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    MINUS           shift and go to state 29

    value_expression               shift and go to state 59
    algebraic_expression           shift and go to state 26

state 42

    (29) logic_expression -> value_expression LESSEQ . value_expression
    (31) value_expression -> . algebraic_expression
    (32) algebraic_expression -> . INT
    (33) algebraic_expression -> . FLOAT
    (34) algebraic_expression -> . algebraic_expression PLUS algebraic_expression
    (35) algebraic_expression -> . algebraic_expression MINUS algebraic_expression
    (36) algebraic_expression -> . algebraic_expression MUL algebraic_expression
    (37) algebraic_expression -> . algebraic_expression DIV algebraic_expression
    (38) algebraic_expression -> . MINUS algebraic_expression

    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    MINUS           shift and go to state 29

    value_expression               shift and go to state 60
    algebraic_expression           shift and go to state 26

state 43

    (30) logic_expression -> value_expression NEQUAL . value_expression
    (31) value_expression -> . algebraic_expression
    (32) algebraic_expression -> . INT
    (33) algebraic_expression -> . FLOAT
    (34) algebraic_expression -> . algebraic_expression PLUS algebraic_expression
    (35) algebraic_expression -> . algebraic_expression MINUS algebraic_expression
    (36) algebraic_expression -> . algebraic_expression MUL algebraic_expression
    (37) algebraic_expression -> . algebraic_expression DIV algebraic_expression
    (38) algebraic_expression -> . MINUS algebraic_expression

    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    MINUS           shift and go to state 29

    value_expression               shift and go to state 61
    algebraic_expression           shift and go to state 26

state 44

    (34) algebraic_expression -> algebraic_expression PLUS . algebraic_expression
    (32) algebraic_expression -> . INT
    (33) algebraic_expression -> . FLOAT
    (34) algebraic_expression -> . algebraic_expression PLUS algebraic_expression
    (35) algebraic_expression -> . algebraic_expression MINUS algebraic_expression
    (36) algebraic_expression -> . algebraic_expression MUL algebraic_expression
    (37) algebraic_expression -> . algebraic_expression DIV algebraic_expression
    (38) algebraic_expression -> . MINUS algebraic_expression

    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    MINUS           shift and go to state 29

    algebraic_expression           shift and go to state 62

state 45

    (35) algebraic_expression -> algebraic_expression MINUS . algebraic_expression
    (32) algebraic_expression -> . INT
    (33) algebraic_expression -> . FLOAT
    (34) algebraic_expression -> . algebraic_expression PLUS algebraic_expression
    (35) algebraic_expression -> . algebraic_expression MINUS algebraic_expression
    (36) algebraic_expression -> . algebraic_expression MUL algebraic_expression
    (37) algebraic_expression -> . algebraic_expression DIV algebraic_expression
    (38) algebraic_expression -> . MINUS algebraic_expression

    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    MINUS           shift and go to state 29

    algebraic_expression           shift and go to state 63

state 46
